tests/builder/enum.rs
use boring_derive::Builder;

#[derive(Builder)]
enum Example {
    Item(usize),
}

fn main() {}
